# CAI_Workbench_MCP_Server

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  Makefile  NOTICE.txt  README.md  SETUP.md  docker-compose.secrets.yml  inference_test.py  pyproject.toml
.github/workflows/: ci.yml
cai_workbench_mcp_server/: __init__.py  http_server.py  stdio_server.py
cai_workbench_mcp_server/src/: __init__.py
cai_workbench_mcp_server/src/functions/: __init__.py  add_project_collaborator.py  batch_list_projects.py  create_application.py  create_docker_credential.py  create_experiment.py  create_experiment_run.py  create_job.py  create_job_run.py  create_model.py  create_model_build.py  create_model_deployment.py  create_project.py  create_registered_model.py  create_runtime_repo.py  create_v2_key.py  delete_all_jobs.py  delete_application.py  delete_docker_credential.py  delete_experiment.py  delete_experiment_run.py  delete_experiment_run_batch.py  delete_job.py  delete_model.py  delete_model_build.py  delete_project.py  delete_project_collaborator.py  delete_project_file.py  delete_registered_model.py  delete_registered_model_version.py  delete_runtime_repo.py  delete_v2_key.py  delete_v2_keys.py  download_project_file.py  get_application.py  get_default_quota.py  get_default_quotas.py  get_experiment.py  get_experiment_run.py  get_experiment_run_metrics.py  (+68 more)
cml_mcp_server/: __init__.py  http_server.py  stdio_server.py
cml_mcp_server/src/functions/: batch_list_projects.py  create_application.py  create_experiment.py  create_experiment_run.py  create_job.py  create_job_run.py  create_model_build.py  create_model_deployment.py  delete_all_jobs.py  delete_application.py  delete_experiment.py  delete_experiment_run.py  delete_experiment_run_batch.py  delete_job.py  delete_model.py  delete_project_file.py  get_experiment.py  get_experiment_run.py  get_job.py  get_job_run.py  get_model.py  get_model_build.py  get_model_deployment.py  list_experiments.py  list_job_runs.py  list_jobs.py  list_model_builds.py  list_model_deployments.py  list_models.py  list_project_files.py  log_experiment_run_batch.py  restart_application.py  stop_application.py  stop_job_run.py  stop_model_deployment.py  update_application.py  update_experiment.py  update_experiment_run.py  update_job.py  update_project.py  (+3 more)
scripts/: list_cai_projects.py
tests/: README.md  test_all_functions.py  test_cai_mcp_client.py  test_cml_mcp_client.py  test_create_job_pytest.py  test_create_project.py  test_create_registered_model.py  test_http_helpers.py  test_list_teams.py  test_project_discovery_pytest.py  test_project_file_and_project_pagination.py  test_runtimes_pytest.py
